--- a/README
+++ b/README
@@ -1,71 +1,3 @@
-jQuery.loadImg is a imgLoader.
-$.loadImg loads img then cache it into the memory.
-This may let you handle img loading easily.
-works on jQuery 1.6.2.
+# USE THIS INSTEAD
 
-added $.presetPreloader. (2011/08/16)
-presetPreloader is useful when you use img rollover or css imgreplacement things.
-This create only one img for each requested srcs using deferred.
-
-added $.calcNaturalWH / $.fn.calcNaturalWH (2011/09/18)
-These are the utils to get naturalWidth, naturalHeight info.
-
-============================================
-
-Usage: $.loadImg
-
-$.loadImg('somewhere/img.png').then(function($img){
-    $('body').append($img);
-},function(error){
-    alert(error.msg);
-});
-
-============================================
-
-Usage: $.presetPreloader
-
-$.presetPreloader.register({
-
-	/* static paths */
-	'button1': [ 'button1_hover.png', 'button1_active.png' ],
-	'button2': [ 'button2_hover.png', 'button2_active.png' ],
-
-	/* String.prototype.replace method's arguments.
-	   use img's src attr as original src. */
-	'hoverimg': [ 
-		[/^(.+_)normal(\.[^.]+)$/, '$1hover$2'],
-		[/^(.+_)normal(\.[^.]+)$/, '$1active$2']
-	]
-
-});
-
-<a href="#" class="ir button1 js-preload" data-presetpreload-key="button1">Button</a>
-<a href="#" class="ir button2 js-preload" data-presetpreload-key="button2">Button</a>
-<a href="#" class="ir button1 js-preload" data-presetpreload-key="button1">Button</a>
-<a href="#" class="ir button2 js-preload" data-presetpreload-key="button2">Button</a>
-<!-- and, code :hover, :active image replacement css for these anchors... -->
-
-$('.js-preload').presetPreload(); // fire preload
-$.presetPreloader.load('hoverimg', 'hogehoge_normal.png'); // can fire preload to call load method directly
-
-============================================
-
-Usage: $.calcNaturalWH / $.fn.calcNaturalWH()
-
-$('img#anImgElementOnThePage').calcNaturalWH().done(function(wh){
-	alert(wh.width); // 1200
-	alert(wh.height); // 1000
-});
-
-$.calcNaturalWH('img1.jpg').done(function(wh){
-	alert(wh.width); // 1200
-	alert(wh.height); // 1000
-})
-
-============================================
-
-Demos:
-
-http://dl.dropbox.com/u/268240/gitHubDemos/jQuery.loadImg/loadImg_w_flickr/index.html
-http://dl.dropbox.com/u/268240/gitHubDemos/jQuery.loadImg/presetPreloader/index.html
-http://dl.dropbox.com/u/268240/gitHubDemos/jQuery.loadImg/naturalWH/index.html
+https://github.com/Takazudo/jQuery.ImgLoader
